<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    tools:context=".ui.notes.NotesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notes_"
                android:gravity="center_horizontal"
                android:theme="@style/CustomBoldGilroy"
                android:textSize="@dimen/text_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_messages"
                android:gravity="center_horizontal"
                android:theme="@style/CustomMediumGilroy"
                android:textSize="@dimen/text_medium"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:src="@color/grey"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/bg_gradient_black"
                        android:padding="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Meena, 23"
                            android:textColor="@color/white"
                            android:theme="@style/CustomBoldGilroy"
                            android:textSize="@dimen/text_large"/>

                        <TextView
                            android:id="@+id/tv_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tapToReview"
                            android:textColor="@color/white"
                            android:theme="@style/CustomMediumGilroy"
                            android:textSize="@dimen/text_small"/>

                    </LinearLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interested_in_you"
                        android:theme="@style/CustomBoldGilroy"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Premium_members"
                        android:theme="@style/CustomMediumGilroy"
                        android:textColor="@color/grey1"
                        android:textSize="@dimen/text_small"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upgrade"
                    android:backgroundTint="@color/yellow"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/inter_bold"
                    android:padding="15dp"
                    android:letterSpacing="0.05"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="30dp"
                    app:elevation="0dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include
                    android:id="@+id/layout_profile_1"
                    android:layout_weight="1"
                    layout="@layout/card_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/layout_profile_2"
                    android:layout_weight="1"
                    layout="@layout/card_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>